--- a/2_python_programming_language/10_python_multiprocessing.ipynb
+++ b/2_python_programming_language/10_python_multiprocessing.ipynb
@@ -67,30 +67,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Worker process id for 1: 7944\n",
-      "Worker process id for 2: 7944\n",
-      "Worker process id for 3: 7944\n",
-      "Worker process id for 4: 7944\n",
-      "Worker process id for 5: 7944\n",
+      "Worker process id for 1: 5641\n",
+      "Worker process id for 2: 5641\n",
+      "Worker process id for 3: 5641\n",
+      "Worker process id for 4: 5641\n",
+      "Worker process id for 5: 5641\n",
       "[1, 4, 9, 16, 25]\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "# Python program to find \n",
     "# squares of numbers in a given list \n",
     "def square(n):\n",
-    "    print(\"Worker process id for {0}: {1}\".format(n, os.getpid()))\n",
+    "    print(\"Worker process id for {}: {}\".format(n, os.getpid()))\n",
     "    return (n*n) \n",
     "\n",
-    "if __name__ == \"__main__\": \n",
-    "    # input list \n",
-    "    mylist = [1,2,3,4,5] \n",
-    "    # empty list to store result \n",
-    "    result = [] \n",
-    "    for num in mylist: \n",
-    "        result.append(square(num)) \n",
-    "    print(result) "
+    "# input list \n",
+    "mylist = [1,2,3,4,5] \n",
+    "# empty list to store result \n",
+    "result = [] \n",
+    "for num in mylist: \n",
+    "    result.append(square(num)) \n",
+    "print(result)"
    ]
   },
   {
@@ -117,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Worker process id for 2: 11702\n",
-      "Worker process id for 1: 11701\n",
-      "Worker process id for 5: 11701\n",
-      "Worker process id for 4: 11704\n",
-      "Worker process id for 3: 11703\n",
+      "Worker process id for 1: 5854\n",
+      "Worker process id for 3: 5856\n",
+      "Worker process id for 4: 5855\n",
+      "Worker process id for 2: 5857\n",
+      "Worker process id for 5: 5854\n",
       "[1, 4, 9, 16, 25]\n"
      ]
     }
@@ -137,22 +137,20 @@
     "# Python program to understand  \n",
     "# the concept of pool \n",
     "from multiprocessing import Pool \n",
-    "import os \n",
     "  \n",
     "def square(n): \n",
-    "    print(\"Worker process id for {0}: {1}\".format(n, os.getpid())) \n",
+    "    print(\"Worker process id for {}: {}\".format(n, os.getpid())) \n",
     "    return (n*n) \n",
-    "  \n",
-    "if __name__ == \"__main__\": \n",
-    "    # input list \n",
-    "    mylist = [1,2,3,4,5] \n",
-    "  \n",
-    "    # creating a pool object\n",
-    "    with Pool() as p: # utilize all cpu cores\n",
-    "    # map list to target function \n",
-    "        result = p.map(square, mylist) \n",
-    "    # using with to automatically close pool after processes finishes excution \n",
-    "    print(result)"
+    "   \n",
+    "# input list \n",
+    "mylist = [1,2,3,4,5] \n",
+    "\n",
+    "# creating a pool object\n",
+    "with Pool() as p: # utilize all cpu cores\n",
+    "# map list to target function \n",
+    "    result = p.map(square, mylist) \n",
+    "# using with to automatically close pool after processes finishes excution \n",
+    "print(result)"
    ]
   },
   {
@@ -164,32 +162,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Worker process id for (100, 0, -100): 11945\n",
-      "Worker process id for (1, 2, 3): 11943\n",
-      "Worker process id for (10, 20, 30): 11944\n",
+      "Worker process id for (100, 0, -100): 3530\n",
+      "Worker process id for (1, 2, 3): 3531\n",
+      "Worker process id for (10, 20, 30): 3532\n",
       "[6, 60, 0]\n"
      ]
     }
    ],
    "source": [
     "def add(x,y,z): \n",
-    "    print(\"Worker process id for {0}: {1}\".format((x,y,z), os.getpid())) \n",
+    "    print(\"Worker process id for {}: {}\".format((x,y,z), os.getpid())) \n",
     "    return (x+y+z) \n",
-    "  \n",
-    "if __name__ == \"__main__\":   \n",
-    "    # creating a pool object\n",
-    "    with Pool() as p: # utilize all cpu cores\n",
-    "    # map list to target function \n",
-    "        result = p.starmap(add, [(1,2,3),(10,20,30),(100,0,-100)]) \n",
-    "    # using with to automatically close pool after processes finishes excution \n",
-    "    print(result)"
+    "     \n",
+    "# creating a pool object\n",
+    "with Pool() as p: # utilize all cpu cores\n",
+    "# map list to target function \n",
+    "    result = p.starmap(add, [(1,2,3),(10,20,30),(100,0,-100)])\n",
+    "# using with to automatically close pool after processes finishes excution \n",
+    "print(result)"
    ]
   }
  ],
