--- a/2_python_programming_language/8_object_oriented_concepts.ipynb
+++ b/2_python_programming_language/8_object_oriented_concepts.ipynb
@@ -60,9 +60,10 @@
     "class Person:  # we are modelling a person in software\n",
     "\n",
     "    # any python class must contain __init__() function (object’s constructor) , to initialize attributes for objects\n",
-    "    # what does self mean ? >>> in any class method self parameter means that this function is applied on the generated object\n",
-    "\n",
+    "    # what does self mean ? >>> in any class method self parameter means that this function is applied on the generated objec\n",
+    "    \n",
     "    def __init__(self, input_name, input_surname, input_birthdate, input_address, input_telephone):\n",
+    "        \n",
     "        # initialize person object attributes\n",
     "        self.name = input_name\n",
     "        self.surname = input_surname\n",
