--- a/2_python_programming_language/9_dealing_with_txt_files.ipynb
+++ b/2_python_programming_language/9_dealing_with_txt_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      "['hello world\\n', '12400\\n']\n"
+      "['hello world\\n', '12400']\n"
      ]
     }
    ],
@@ -24,19 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write txt file\n",
     "with open('files/newfile.txt',mode='w') as txtfile: # mode =w >>> write mode and if file not found new file will be created\n",
-    "    nums=[str(i) for i in range(20)]\n",
-    "    txtfile.writelines(nums)"
+    "    nums='\\n'.join(str(i) for i in range(20))\n",
+    "    txtfile.writelines(nums)\n",
+    "    \n",
+    "# note mode >> w if file found >>>> overrite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,39 +51,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['file2.txt', 'file1.txt', 'newfile.txt', 'file3.txt']"
+       "['.ipynb_checkpoints',\n",
+       " 'all_big_file.txt',\n",
+       " 'file1.txt',\n",
+       " 'file2.txt',\n",
+       " 'file3.txt',\n",
+       " 'newfile.txt']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os # os module\n",
-    "txtfiles=os.listdir('files/') # list all files in files directory\n",
+    "txtfiles=sorted(os.listdir('files/')) # list all files in files directory and sort them\n",
     "txtfiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded lines in file2.txt\n",
+      "loaded lines in all_big_file.txt\n",
       "loaded lines in file1.txt\n",
-      "loaded lines in newfile.txt\n",
-      "loaded lines in file3.txt\n"
+      "loaded lines in file2.txt\n",
+      "loaded lines in file3.txt\n",
+      "loaded lines in newfile.txt\n"
      ]
     }
    ],
@@ -89,15 +97,21 @@
     "# assume we want to read all files in the directory and compine them in one file\n",
     "big=open('files/all_big_file.txt',mode='w') # create new empty file\n",
     "big.close()\n",
+    "# loop over txt files in 'files/'\n",
     "for f in txtfiles:\n",
     "    # read txt file\n",
-    "    with open('files/'+f) as txt:\n",
-    "        lines=txt.readlines()\n",
-    "        print(\"loaded lines in \"+f)\n",
-    "        # open big file\n",
-    "        with open('files/all_big_file.txt',mode='a') as big:\n",
+    "    ext=f.split('.')[1]\n",
+    "    if ext=='txt':\n",
+    "        with open('files/'+f) as txt: # default mode r >>> read\n",
+    "            lines=txt.readlines()\n",
+    "            print(\"loaded lines in \"+f)\n",
+    "            # open big file\n",
+    "            with open('files/all_big_file.txt',mode='a') as big:\n",
     "            # append mode\n",
-    "            big.writelines(lines)"
+    "                big.writelines(lines)\n",
+    "                big.write('\\n')\n",
+    "    else:\n",
+    "        pass # pass non txt files"
    ]
   }
  ],
